--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
+body{
+    padding: 125px;
+}
 .grid-container-parent {
     display: grid;
     width: 618px;
     height: 621px;
     grid-template-columns: auto auto auto;
 
-    border-bottom: 5px solid black;
+    border-bottom: 9px solid black;
     border-top: 3px solid black;
     border-left: 3px solid black;
     border-right: 3px solid black;
@@ -17,9 +20,9 @@
     grid-template-columns: auto auto auto;
     background-color: lightgrey;
     border-bottom: 4px solid black;
-    border-top: 3px solid black;
+    border-top: 4px solid black;
     border-left: 3px solid black;
-    border-right: 4px solid black;
+    border-right: 3px solid black;
 }
 
 .grid-item {
